--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,12 +1,38 @@
-<form action="{% url 'polls:vote' question.id %}" method="post">
-{% csrf_token %}
-<fieldset>
-    <legend><h1>{{ question.question_text }}</h1></legend>
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-    {% for choice in question.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-    {% endfor %}
-</fieldset>
-<input type="submit" value="Vote">
-</form>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  {% load static %}
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.png' %}" />
+  <title>My First Django - Polls</title>
+</head>
+<body class="my-bg">
+  <div class="mt-9 p-6 max-w-lg mx-auto bg-white rounded-xl shadow-md space-x-4 my-box">
+    <div class="text-indigo-900 font-bold">
+      <form action="{% url 'polls:vote' question.id %}" method="post">
+      {% csrf_token %}
+      <fieldset>
+          <legend class="m-9 mx-auto text-3xl font-extrabold text-center">
+            <h1 class="bg-clip-text text-transparent bg-gradient-to-r from-indigo-600 to-indigo-800">{{ question.question_text }}</h1>
+          </legend>
+          {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+          {% for choice in question.choice_set.all %}
+              <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+              <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br><br>
+          {% endfor %}
+      </fieldset>
+      <p class="mt-6">
+        <input type="submit" value="Vote" class="py-2 px-4 font-semibold rounded-lg shadow-md text-white bg-indigo-500 hover:bg-indigo-600">
+      </p>
+      </form>
+    </div>
+  </div>
+<p class="mt-6 text-center text-gray-50 text-xs">
+  ⓒ 2021 Hing9u. All Rights Reserved.
+</p>
+</body>
+</html>
