--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -1,9 +1,49 @@
-<h1>{{ question.question_text }}</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  {% load static %}
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.png' %}" />
+  <title>My First Django - Polls</title>
+</head>
+<body class="my-bg">
+<div class="mt-9 p-6 max-w-lg mx-auto rounded-xl shadow-md my-box">
+  <div class="mx-auto text-3xl font-extrabold text-center">
+    <h1 class="bg-clip-text text-transparent bg-gradient-to-r from-indigo-600 to-indigo-800">
+      {{ question.question_text }}
+    </h1>
+  </div>
+  <div class="mt-9 text-indigo-900">
+    <ul>
+    {% for choice in question.choice_set.all %}
+      <li>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="#ffffff88">
+          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+        </svg>
+        <span class="font-bold">{{ choice.choice_text }}</span> -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li><br>
+    {% endfor %}
+    </ul>
+    <p class="mt-6">
+      <a href="{% url 'polls:detail' question.id %}">
+        <button class="py-2 px-4 font-semibold rounded-lg shadow-md text-white bg-indigo-500 hover:bg-indigo-600">
+          Vote again?
+        </button>
+      </a>
+      <a href="{% url 'polls:index' %}">
+        <button class="py-2 px-4 font-semibold rounded-lg shadow-md text-white my-th hover:bg-white hover:bg-opacity-30">
+          Home
+        </button>
+      </a>
+    </p>
+  </div>
+</div>
+<p class="mt-6 text-center text-gray-50 text-xs">
+  ⓒ 2021 Hing9u. All Rights Reserved.
+</p>
+</body>
+</html>
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
-
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
