style: Update templates

--- a/mysite/polls/templates/polls/pie_chart.html
+++ b/mysite/polls/templates/polls/pie_chart.html
@@ -67,7 +67,7 @@
 
   </div>
   <p class="mt-6 text-center text-gray-50 text-xs">
-    ⓒ 2021 Hing9u. All Rights Reserved.
+    ⓒ 2021 Devpla. All Rights Reserved.
   </p>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </body>
