--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 <p class="mt-6 text-center text-gray-50 text-xs">
-  ⓒ 2021 Hing9u. All Rights Reserved.
+  ⓒ 2021 Devpla. All Rights Reserved.
 </p>
 </body>
 </html>
