--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -55,7 +55,7 @@
     </div>
   </div>
 <p class="text-center text-gray-50 text-xs">
-  ⓒ 2021 Hing9u. All Rights Reserved.
+  ⓒ 2021 Devpla. All Rights Reserved.
 </p>
 </body>
 </html>
